[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = {version = "^1.0", features = ["derive"]}
env_logger = "0.8"
log = "^0.4"
redis = { version ="^0.22" }
uuid = { version = "^1.3", features = ["v4"] }
